<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center|top"
    tools:context=".ui.auth.ForgotPassword"
    android:layout_margin="20dp"
    android:background="@color/white">


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:visibility="gone"
        />

    <LinearLayout
        android:id="@+id/linearEmailVerification"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center|top">
        <ImageButton
            android:id="@+id/ibBackToLogin"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="start"
            android:layout_marginBottom="30dp"
            android:scaleType="fitCenter"
            android:src="@drawable/outline_arrow_left_alt_24"
            android:background="@color/white"/>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_email_verification"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_your_email"
            android:fontFamily="@font/poppins_bold"
            android:textSize="35sp"
            android:textColor="@color/bagcilar_dark_blue"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_desc"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_medium"
            android:textAlignment="center"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnImVerified"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/bagcilar_dark_blue"
            android:text="@string/i_ve_verified_my_email"
            android:textSize="20sp"
            android:fontFamily="@font/poppins_semibold"
            app:cornerRadius="4dp"
            app:strokeColor="@color/bagcilar_light_blue"
            app:strokeWidth="3dp"
            android:elevation="4dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"/>



        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnResendEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/bagcilar_light_blue"
            android:text="@string/resend_email"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="20sp"
            app:cornerRadius="4dp"
            app:strokeColor="@color/bagcilar_dark_blue"
            app:strokeWidth="3dp"
            android:elevation="4dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvChangeEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_email"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginTop="20dp"
            android:padding="8dp"/>
    </LinearLayout>



</FrameLayout>