<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center|top"
    tools:context=".ui.onboarding.viewpager.ReportIssueFragment"
    android:layout_margin="20dp"
    android:background="@color/white">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:visibility="gone"
        />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_bagcilar_logo"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:visibility="gone"
        />

    <LinearLayout
        android:id="@+id/linearRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center|top">
        <ImageButton
            android:id="@+id/ibBackToLogin"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="top"
            android:layout_marginBottom="30dp"
            android:scaleType="fitCenter"
            android:src="@drawable/outline_arrow_left_alt_24"
            android:background="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bagcilar_municipality"
            android:textColor="@color/bagcilar_dark_blue"
            android:fontFamily="@font/poppins_bold"
            android:textSize="35sp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/municipality_desc"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_medium"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/full_name"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/bagcilar_dark_blue"
            app:boxStrokeWidth="3dp"
            app:hintTextColor="@color/bagcilar_dark_blue"
            app:startIconDrawable="@drawable/outline_person_24">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFullName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/mail"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/bagcilar_dark_blue"
            app:boxStrokeWidth="3dp"
            app:hintTextColor="@color/bagcilar_dark_blue"
            app:startIconDrawable="@drawable/baseline_mail_outline_24">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/phone_number"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/bagcilar_dark_blue"
            app:boxStrokeWidth="3dp"
            app:hintTextColor="@color/bagcilar_dark_blue"
            app:startIconDrawable="@drawable/baseline_local_phone_24">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="Password"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/bagcilar_dark_blue"
            app:boxStrokeWidth="3dp"
            app:hintTextColor="@color/bagcilar_dark_blue"
            app:startIconDrawable="@drawable/outline_lock_24"
            app:endIconMode="password_toggle">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/confirmation_password"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/bagcilar_dark_blue"
            app:boxStrokeWidth="3dp"
            app:hintTextColor="@color/bagcilar_dark_blue"
            app:startIconDrawable="@drawable/outline_person_24"
            app:endIconMode="password_toggle">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textSize="14sp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/terms" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/bagcilar_dark_blue"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="20sp"
            app:cornerRadius="4dp"
            android:elevation="4dp"
            app:strokeColor="@color/bagcilar_light_blue"
            app:strokeWidth="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="30dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:fontFamily="@font/poppins_medium"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/tvLogIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:textSize="15sp"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/bagcilar_dark_blue"
                android:layout_marginStart="5dp"/>
        </LinearLayout>

    </LinearLayout>



</FrameLayout>