<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center|top"
    tools:context=".ui.onboarding.viewpager.ReportIssueFragment"
    android:layout_margin="20dp"
    android:background="@color/white">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:visibility="gone"
        />

    <LinearLayout
        android:id="@+id/linearLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center|top">
        <ImageButton
            android:id="@+id/ibBackToLogin"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="start"
            android:layout_marginBottom="30dp"
            android:scaleType="fitCenter"
            android:src="@drawable/outline_arrow_left_alt_24"
            android:background="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bagcilar_municipality"
            android:textColor="@color/bagcilar_dark_blue"
            android:fontFamily="@font/poppins_bold"
            android:textSize="35sp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Access digital municipal services."
            android:textColor="@color/black"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_medium"/>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/mail"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/bagcilar_dark_blue"
            app:boxStrokeWidth="3dp"
            app:hintTextColor="@color/bagcilar_dark_blue"
            app:startIconDrawable="@drawable/baseline_mail_outline_24">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forgot Password?"
            android:textColor="@color/bagcilar_dark_blue"
            android:fontFamily="@font/poppins_medium"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            android:layout_gravity="end"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/bagcilar_dark_blue"
            app:boxStrokeWidth="3dp"
            app:hintTextColor="@color/bagcilar_dark_blue"
            app:startIconDrawable="@drawable/outline_lock_24"
            app:endIconMode="password_toggle">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>




        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/bagcilar_dark_blue"
            android:text="Log in"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="20sp"
            app:cornerRadius="4dp"
            android:elevation="4dp"
            app:strokeColor="@color/bagcilar_light_blue"
            app:strokeWidth="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/outline_person_24"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:fontFamily="@font/poppins_medium"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/tvnSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign Up"
                android:textSize="15sp"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/bagcilar_dark_blue"
                android:layout_marginStart="5dp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvContinueAsGuest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_as_guest"
            android:fontFamily="@font/poppins_medium"
            android:textSize="18sp" />
    </LinearLayout>



</FrameLayout>